--- a/app/src/main/res/layout/fragment_get_weather.xml
+++ b/app/src/main/res/layout/fragment_get_weather.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <FrameLayout
-    tools:context=".getWeatherFragment"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        tools:context=".getWeatherFragment"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <TextView
+            android:id="@+id/current_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="40sp"/>
 
         <TextView
             android:id="@+id/current_temp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginVertical="32sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="32sp" />
 
 
-    </FrameLayout>
+
+
+</LinearLayout>
