--- a/app/src/main/res/layout/fragment_get_weather.xml
+++ b/app/src/main/res/layout/fragment_get_weather.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginVertical="30sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="40sp"/>
 
