made the screen scroll

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#3BB9FF" >
 
-    <LinearLayout
+    <ScrollView
         android:orientation="vertical"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
