--- a/app/src/main/res/layout/fragment_get_weather.xml
+++ b/app/src/main/res/layout/fragment_get_weather.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<ScrollView
+    android:layout_height="100sp"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         tools:context=".getWeatherFragment"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:tools="http://schemas.android.com/tools">
 
         <TextView
             android:id="@+id/current_location"
@@ -32,15 +35,20 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="32sp" />
 
-    <TextView
-        android:id="@+id/two_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="15sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="32sp" />
+        <TextView
+            android:id="@+id/two_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="15sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="32sp" />
 
-
-
-
-</LinearLayout>
+        <TextView
+            android:id="@+id/three_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="15sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="32sp" />
+    </LinearLayout>
+</ScrollView>
