--- a/app/src/main/res/layout/fragment_get_weather.xml
+++ b/app/src/main/res/layout/fragment_get_weather.xml
@@ -11,13 +11,13 @@
         android:orientation="vertical"
         xmlns:tools="http://schemas.android.com/tools">
 
-        <TextView
+   <!--     <TextView
             android:id="@+id/current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="30sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="40sp"/>
+            android:textSize="40sp"/>  -->
 
         <TextView
             android:id="@+id/current_temp"
