--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2137B3</color>
-    <color name="colorPrimaryDark">#2137B3</color>
-    <color name="colorAccent">#1A5CAC</color>
+    <color name="colorPrimary">#1B77F8</color>
+    <color name="colorPrimaryDark">#1B77F8</color>
+    <color name="colorAccent">#E35EA0FD</color>
 </resources>
