added todays forecast

--- a/app/src/main/res/layout/fragment_get_weather.xml
+++ b/app/src/main/res/layout/fragment_get_weather.xml
@@ -28,6 +28,14 @@
             android:textSize="32sp" />
 
         <TextView
+            android:id="@+id/this_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="15sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="32sp" />
+
+        <TextView
             android:id="@+id/tomorrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
