--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorAccent" >
 
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="15sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="32sp"
+        tools:ignore="MissingConstraints" />
+
     <ScrollView
         android:orientation="vertical"
         android:layout_height="match_parent"
