--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#1B77F8</color>
     <color name="colorAccent">#E35EA0FD</color>
 
-    <color name="alert">#990000</color>
+    <color name="alert">#FF0505</color>
 </resources>
