--- a/app/src/main/res/layout/alert_activity.xml
+++ b/app/src/main/res/layout/alert_activity.xml
@@ -4,5 +4,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/alert"
     tools:context=".AlertActivity" />
