--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#E35EA0FD</color>
 
     <color name="alert">#DA0202</color>
+
+    <color name="black">#090101</color>
 </resources>
