--- a/app/src/main/res/layout/alert_fragment.xml
+++ b/app/src/main/res/layout/alert_fragment.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="15sp"
+        android:fontFamily="serif-monospace"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="28sp" />
 
