--- a/app/src/main/res/layout/show_weather_fragment.xml
+++ b/app/src/main/res/layout/show_weather_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="15sp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="serif-monospace"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="32sp" />
 
