--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="TabText" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="android:textAllCaps">true</item>
-        <item name="android:fontFamily">serif-monospace</item>
+        <item name="android:fontFamily">sans-serif-smallcaps</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
