--- a/app/src/main/res/layout/minimal_widget.xml
+++ b/app/src/main/res/layout/minimal_widget.xml
@@ -14,7 +14,9 @@
         android:orientation="horizontal"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:gravity="center">
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true">
     </TextView>
 
 </FrameLayout>
