--- a/app/src/main/res/xml/provider.xml
+++ b/app/src/main/res/xml/provider.xml
@@ -1,7 +1,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="10dp"
     android:minHeight="10dp"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="30000"
     android:previewImage="@drawable/bkw_icon_foreground"
     android:initialLayout="@layout/minimal_widget"
     android:configure="com.bkendall.bk_weather.MinimalWidget"
