--- a/app/src/main/res/xml/minimal_widget_info.xml
+++ b/app/src/main/res/xml/minimal_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/minimal_widget"
     android:minWidth="40dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/bkw_icon_foreground"
+    android:previewImage="@drawable/widget_preview"
 
     android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen" />
