--- a/app/src/main/res/xml/provider.xml
+++ b/app/src/main/res/xml/provider.xml
@@ -2,7 +2,7 @@
     android:minWidth="10dp"
     android:minHeight="10dp"
     android:updatePeriodMillis="1800000"
-    android:previewImage="@drawable/bkw_icon_foreground"
+    android:previewImage="@drawable/widget_preview"
     android:initialLayout="@layout/minimal_widget"
     android:configure="com.bkendall.bk_weather.MinimalWidget"
     android:resizeMode="horizontal|vertical"
